# learn-opengl

./: .clangd  Makefile  README.md  meson.build
include/glad/: glad.h
src/: fragment.glsl  glad.c  main.cpp  meson.build  shader.h  texture.h  vertex.glsl  window.h
